--- a/bingo-app/src/App.css
+++ b/bingo-app/src/App.css
@@ -7,7 +7,8 @@ body {
   background-image: url("/jim-sports-fondo.png");
   background-repeat: no-repeat;
   background-position: 105% -15%;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
+  
 }
 
 .ball {
@@ -24,8 +25,11 @@ body {
   color: white;
 }
 nav{
-  max-width: 70%;
-  margin: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: -7rem;
 }
 .b1 {
   background-color: #EF1B1D;
@@ -76,3 +80,113 @@ h1 {
   filter: drop-shadow(0 0 2em #d40808aa);
 }
 
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+}
+
+html, body{
+  height: 100%;
+}
+
+
+h1 {
+  font-size: 10.2em;
+  line-height: 1.1;
+  margin-bottom: 148px;
+}
+
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  margin-left: 35px;
+}
+button:hover {
+  border-color: #EF1B1D;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
+}
+/* animacion bombo bingo*/
+
+.lottery-machine {
+  /* position: absolute; */
+  border-radius: 50%;
+  /* left: 423px; */
+  width: 200px;
+  height: 215px;
+  padding-top: 2rem;
+  }
+  .lottery-machine::after {
+  content: "";
+  position: absolute;
+  display: block;
+  /* left: 8px;
+  top: 23px; */
+  width: 140px;
+  height: 140px;
+  background-color: rgba(252, 251, 251, 0.3);
+  border: 7px solid #9c0303;
+  border-radius: inherit;
+  box-sizing: border-box;
+
+  }
+  .lottery-bal{
+    background: radial-gradient(
+      circle at 65% 15%,
+      white 1px,
+      rgb(168, 166, 166) 3%,
+      rgb(146, 144, 144) 60%,
+      rgb(236, 216, 217) 100%
+    );
+  width: 16px;
+  border-radius: 22px;
+  height: 16px;
+  padding: 4px;
+  border: 1px solid;
+  text-align: center;
+  vertical-align: middle;
+  position: absolute;
+  z-index: 99;
+  }
+  .scene{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    vertical-align: middle;
+  }
