--- a/bingo-app/src/App.css
+++ b/bingo-app/src/App.css
@@ -4,10 +4,11 @@ body {
   padding: 2rem;
   text-align: center;
 
-  background-image: url("/jim-sports-fondo.png");
+  background-image: url("/jim-sports-fondoopaco.png");
   background-repeat: no-repeat;
-  background-position: 105% -15%;
+  background-position: 105% 25%;
   /* background-attachment: fixed; */
+  background-size: cover;
   
 }
 
@@ -29,7 +30,7 @@ nav{
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
-  margin-top: -7rem;
+  /* margin-top: -7rem; */
 }
 .b1 {
   background-color: #EF1B1D;
@@ -67,10 +68,6 @@ b{
   font-size: 2.2em;  
 }
 
-h1 {
-  font-size: 4.2em;
-  line-height: 1.1;
-}
 .logo {
   height: 4em;
   will-change: filter;
@@ -85,7 +82,7 @@ h1 {
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -102,9 +99,10 @@ html, body{
 
 
 h1 {
-  font-size: 10.2em;
+  font-size: 10.3em;
   line-height: 1.1;
-  margin-bottom: 148px;
+  margin: 0;
+  /* margin-bottom: 148px; */
 }
 
 
@@ -128,7 +126,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -139,7 +137,7 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
 /* animacion bombo bingo*/
 
 .lottery-machine {
@@ -185,7 +183,7 @@ button:focus-visible {
   .scene{
     display: flex;
     flex-direction: row;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
     padding: 0;
     vertical-align: middle;
